--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </main>
         
         <footer>
-            <p>Dibuat dengan ❤️ oleh ZenzzXD</p>
+            <p>Dibuat dengan ❤️ oleh Bran</p>
         </footer>
     </div>
 
